Fix footer alignment issue

--- a/styles/regions/footer.scss
+++ b/styles/regions/footer.scss
@@ -51,7 +51,7 @@
 
 .footer .container > div {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     justify-items: center;
     align-items: start;
 }
